# luchi_ui_autotests

./: .env-example  README.md  conftest.py  pyproject.toml  requirements.txt
helpers/application_manager/: application_manager.py
helpers/data/: all_links.py
pages/catalog_page/: luchi_catalog_page.py
pages/components/header_menu/: luchi_header_menu.py
pages/home_page/: luchi_home_page.py
tests/tests_luchi_ui/catalog_page/: test_all_categories_is_present.py  test_check_all_categories_is_present.py  test_specific_category_contains.py
tests/tests_luchi_ui/header_menu/: test_navigate_header_menu.py
tests/tests_luchi_ui/home_page/: test_select_insurance_on_home_page.py
tests/tests_luchi_ui/home_page/cookies/: test_accept_cookies.py
utils/: allure_custom_marks.py
